# Auto_Refactor_codebase_MCP

./: .gitignore  AUTO_REFACTOR_PRD.md  QUICK_TEST_PROMPTS.md  README.md  RENAMING_SUMMARY.md  TESTING_GUIDE.md  pyproject.toml  refactor_server.py
examples/: mcp.json.example
src/: __init__.py  ai_suggestion_service.py  ast_wrapper.py  code_node.py  codebase_analyzer.py  config.py  config_discovery.py  config_errors.py  config_loader.py  config_manager.py  database_analyzer.py  database_refactoring.py  git_manager.py  js_complexity.py  js_function_counter.py  loc_calculator.py  metrics_engine.py  parser_factory.py  parser_setup.py  python_metrics.py  refactoring_engine.py  rollback_manager.py  scanner.py  suggestion_manager.py  test_runner.py
tests/: test_ai_suggestion_service.py  test_apply_diff.py  test_ast_query_methods.py  test_ast_wrapper.py  test_basic.py  test_code_node.py  test_codebase_analyzer.py  test_config.py  test_config_discovery.py  test_config_errors.py  test_config_loader.py  test_config_manager.py  test_database_analyzer.py  test_database_refactoring.py  test_execute_refactoring.py  test_extract_function.py  test_get_refactoring_status.py  test_git_manager.py  test_import_export.py  test_interactive_workflow.py  test_js_complexity.py  test_js_function_counter.py  test_loc_calculator.py  test_metrics_engine.py  test_parser_factory.py  test_parser_setup.py  test_python_metrics.py  test_refactoring_engine.py  test_rollback_manager.py  test_scanner.py  test_suggestion_manager.py  test_test_runner.py
